<resources>
    <string name="app_name">Victor Manuel Serrano Barrera HND 2</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="apellidos">Apellidos</string>
    <string name="Login">Login</string>
    <string name="Registro">Registro</string>
    <string name="Email">E-mail</string>
    <string name="pasword">Contraseña</string>
    <string name="perfil">Perfil</string>
    <string name="descripcion">Descripcion</string>
    <string name="personajes">Personajes</string>
    <string name="objetos">Objetos</string>
    <string name="tips">Tips</string>
    <string name="ajustes">Ajustes</string>
    <string name="salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compartir">Compartir</string>
    <string name="trucos">Tips</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ajustes1">VERSION 2.3</string>
    <string name="ajustes2">VGAMES S.A</string>
    <string name="ajustes3">ACTIVADO</string>
    <string name="ajustes4">LOCALIZACION: ESPAÑA</string>
</resources>
