<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alumnos.victormanuelserranobarrerahnd2.Fragments.PerfilFragment"
    android:orientation="vertical">


 <TextView android:id="@+id/nombre"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
      android:text="@string/Nombre"
     android:layout_margin="10dp"
      android:textSize="25dp"/>
    <TextView android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Apellidos"
        android:layout_margin="10dp"
        android:textSize="25dp"/>
    <TextView android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_margin="10dp"
        android:textSize="25dp"/>

</LinearLayout>
